--- a/apps/remix-jokes-app/input.css
+++ b/apps/remix-jokes-app/input.css
@@ -8,3 +8,10 @@
     @apply h-full;
   }
 }
+
+@layer utilities {
+  .text-shadow {
+    text-shadow: 3px 5px 7px var(--tw-shadow-color);
+    --tw-shadow-color: rgb(0 0 0 / 50%);
+  }
+}
